# regit-identifiers

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  SECURITY.md  SPEC.md  deny.toml  justfile  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benches/: identifiers.rs
examples/: quickstart.rs
src/: bic.rs  cfi.rs  charset.rs  checkdigit.rs  convert.rs  country.rs  cusip.rs  detect.rs  errors.rs  figi.rs  isin.rs  lei.rs  lib.rs  mic.rs  mic_registry.rs  sedol.rs  test_support.rs  valor.rs  wkn.rs
tests/: integration.rs
